Creating tokens and tokenizers for normal, sql and git commands; Creating basic command validator;

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,11 @@
 .vscode
 .idea
 venv
-**/.pytest_cache/*
-**/__pycache__/*
+**/.pytest_cache/
+**/__pycache__/
 .reports
 .coverage
 parser.out
 parsetab.py
+**.egg-info
+/build
